<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="about_app_fragment">About App Fragment</string>
    <string name="list_item">List Item</string>
    <string name="name_of_the_book">Name of the Book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="book_rating_1">4.5</string>
    <string name="check_internet">Check Internet</string>
    <string name="price_of_the_book">Price of the Book</string>
    <string name="about_the_book">About the Book</string>
    <string name="hello_world">Hello World</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_sort">Sort</string>
</resources>